# oswrite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
oswrite/: cli.py
tests/: test_oswrite.py
